--- a/trunk/nbproject/project.properties
+++ b/trunk/nbproject/project.properties
@@ -27,11 +27,9 @@ dist.dir=dist
 dist.jar=${dist.dir}/MyNightOut.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.mockito-all-1.9.5.jar=C:\\Users\\Dimitris\\Desktop\\mockito-all-1.9.5.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.mockito-all-1.9.5.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
