--- a/branches/dev-database/MyNightOut/MyNightOut/nbproject/project.properties
+++ b/branches/dev-database/MyNightOut/MyNightOut/nbproject/project.properties
@@ -31,7 +31,8 @@ file.reference.mysql-connector-java-5.1.18-bin.jar=C:\\Users\\ioanna\\Desktop\\m
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.18-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.18-bin.jar}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
