--- a/branches/dev-database/MyNightOut/MyNightOut/nbproject/project.properties
+++ b/branches/dev-database/MyNightOut/MyNightOut/nbproject/project.properties
@@ -43,7 +43,8 @@ javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit_4.classpath}
+    ${libs.junit_4.classpath}:\
+    ${libs.testng.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
