--- a/branches/dev-database/MyNightOut/MyNightOut/nbproject/project.properties
+++ b/branches/dev-database/MyNightOut/MyNightOut/nbproject/project.properties
@@ -27,12 +27,9 @@ dist.dir=dist
 dist.jar=${dist.dir}/MyNightOut.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.mysql-connector-java-5.1.18-bin.jar=C:\\Users\\ioanna\\Desktop\\mysql-connector-java-5.1.18-bin.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.18-bin.jar}:\
-    ${libs.MySQLDriver.classpath}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -43,8 +40,7 @@ javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit_4.classpath}:\
-    ${libs.testng.classpath}
+    ${libs.junit_4.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
