--- a/MyNightOut/nbproject/project.properties
+++ b/MyNightOut/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/MyNightOut.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jcalendar-1.4.jar=C:\\Program Files\\NetBeans 7.4\\libraries pou ebala egw\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
