--- a/MyNightOut/nbproject/project.properties
+++ b/MyNightOut/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/MyNightOut.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Program Files\\NetBeans 7.4\\libraries pou ebala egw\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=dist\\lib\\mysql-connector-java-5.1.23-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
