--- a/trunk/MyNightOut/nbproject/project.properties
+++ b/trunk/MyNightOut/nbproject/project.properties
@@ -27,13 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/MyNightOut.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.jcalendar-1.4.jar=C:\\Program Files\\NetBeans 7.4\\libraries pou ebala egw\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
-file.reference.mysql-connector-java-5.1.23-bin.jar=dist\\lib\\mysql-connector-java-5.1.23-bin.jar
+file.reference.jcalendar-1.4.jar-1=lib\\jcalendar-1.4.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar-1=lib\\mysql-connector-java-5.1.23-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
