--- a/trunk/MyNightOut/nbproject/project.properties
+++ b/trunk/MyNightOut/nbproject/project.properties
@@ -28,12 +28,14 @@ dist.jar=${dist.dir}/MyNightOut.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcalendar-1.4.jar-1=lib\\jcalendar-1.4.jar
+file.reference.mockito-all-1.9.5.jar=lib\\mockito-all-1.9.5.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar-1=lib\\mysql-connector-java-5.1.23-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jcalendar-1.4.jar-1}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar-1}
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar-1}:\
+    ${file.reference.mockito-all-1.9.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
