--- a/branches/dev-issue-27/MyNightOut/MyNightOut/nbproject/project.properties
+++ b/branches/dev-issue-27/MyNightOut/MyNightOut/nbproject/project.properties
@@ -34,8 +34,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jcalendar-1.4.jar-1}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar-1}:\
-    ${file.reference.mockito-all-1.9.5.jar}
+    ${file.reference.mockito-all-1.9.5.jar}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
