--- a/branches/dev-issue-27/MyNightOut/MyNightOut/nbproject/project.properties
+++ b/branches/dev-issue-27/MyNightOut/MyNightOut/nbproject/project.properties
@@ -29,13 +29,17 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcalendar-1.4.jar-1=lib\\jcalendar-1.4.jar
 file.reference.mockito-all-1.9.5.jar=lib\\mockito-all-1.9.5.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files\\NetBeans 7.4\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar-1=lib\\mysql-connector-java-5.1.23-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jcalendar-1.4.jar-1}:\
     ${file.reference.mockito-all-1.9.5.jar}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar-1}
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar-1}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
+    ${libs.ejb3-persistence.classpath}:\
+    ${libs.hibernate-support.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
