--- a/branches/dev-issue-27/MyNightOut/MyNightOut/nbproject/project.properties
+++ b/branches/dev-issue-27/MyNightOut/MyNightOut/nbproject/project.properties
@@ -27,19 +27,45 @@ dist.dir=dist
 dist.jar=${dist.dir}/MyNightOut.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.jcalendar-1.4.jar-1=lib\\jcalendar-1.4.jar
+file.reference.antlr-2.7.6.jar=lib\\antlr-2.7.6.jar
+file.reference.c3p0-0.9.1.jar=lib\\c3p0-0.9.1.jar
+file.reference.cglib-2.2.jar=lib\\cglib-2.2.jar
+file.reference.commons-collections-3.1.jar=lib\\commons-collections-3.1.jar
+file.reference.dom4j-1.6.1.jar=lib\\dom4j-1.6.1.jar
+file.reference.hibernate-commons-annotations-3.2.0.Final.jar=lib\\hibernate-commons-annotations-3.2.0.Final.jar
+file.reference.hibernate-core-3.6.10.Final.jar=lib\\hibernate-core-3.6.10.Final.jar
+file.reference.hibernate-entitymanager-3.6.10.Final.jar=lib\\hibernate-entitymanager-3.6.10.Final.jar
+file.reference.hibernate-jpa-2.0-api-1.0.1.Final.jar=lib\\hibernate-jpa-2.0-api-1.0.1.Final.jar
+file.reference.hibernate-tools-3.6.0.CR1.jar=lib\\hibernate-tools-3.6.0.CR1.jar
+file.reference.javassist-3.12.0.GA.jar=lib\\javassist-3.12.0.GA.jar
+file.reference.jcalendar-1.4.jar=lib\\jcalendar-1.4.jar
+file.reference.jta-1.1.jar=lib\\jta-1.1.jar
 file.reference.mockito-all-1.9.5.jar=lib\\mockito-all-1.9.5.jar
-file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files\\NetBeans 7.4\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
-file.reference.mysql-connector-java-5.1.23-bin.jar-1=lib\\mysql-connector-java-5.1.23-bin.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=lib\\mysql-connector-java-5.1.23-bin.jar
+file.reference.oscache-2.1.jar=lib\\oscache-2.1.jar
+file.reference.slf4j-api-1.6.1.jar=lib\\slf4j-api-1.6.1.jar
+file.reference.slf4j-simple-1.6.1.jar=lib\\slf4j-simple-1.6.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.antlr-2.7.6.jar}:\
+    ${file.reference.c3p0-0.9.1.jar}:\
+    ${file.reference.cglib-2.2.jar}:\
+    ${file.reference.commons-collections-3.1.jar}:\
+    ${file.reference.dom4j-1.6.1.jar}:\
+    ${file.reference.hibernate-commons-annotations-3.2.0.Final.jar}:\
+    ${file.reference.hibernate-core-3.6.10.Final.jar}:\
+    ${file.reference.hibernate-entitymanager-3.6.10.Final.jar}:\
+    ${file.reference.hibernate-jpa-2.0-api-1.0.1.Final.jar}:\
+    ${file.reference.hibernate-tools-3.6.0.CR1.jar}:\
+    ${file.reference.javassist-3.12.0.GA.jar}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jta-1.1.jar}:\
     ${file.reference.mockito-all-1.9.5.jar}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar-1}:\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
-    ${libs.ejb3-persistence.classpath}:\
-    ${libs.hibernate-support.classpath}
+    ${file.reference.oscache-2.1.jar}:\
+    ${file.reference.slf4j-api-1.6.1.jar}:\
+    ${file.reference.slf4j-simple-1.6.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
