--- a/branches/dev-issue-52/MyNightOut/nbproject/project.properties
+++ b/branches/dev-issue-52/MyNightOut/nbproject/project.properties
@@ -48,7 +48,6 @@ file.reference.slf4j-simple-1.6.1.jar=lib\\slf4j-simple-1.6.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    <<<<<<< .mine:\
     ${file.reference.antlr-2.7.6.jar}:\
     ${file.reference.c3p0-0.9.1.jar}:\
     ${file.reference.cglib-2.2.jar}:\
@@ -66,7 +65,8 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
     ${file.reference.oscache-2.1.jar}:\
     ${file.reference.slf4j-api-1.6.1.jar}:\
-    ${file.reference.slf4j-simple-1.6.1.jar}
+    ${file.reference.slf4j-simple-1.6.1.jar}:\
+    <<<<<<< .mine
     ${file.reference.jcalendar-1.4.jar-1}:\
     ${file.reference.mockito-all-1.9.5.jar}:\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar-1}
