Ως διαχειριστής του προγράματος θα ήθελα να λαμβάνω τις αιτήσεις για δημιουργία νέων καταστημάτων μέσω e-mail.

--- a/branches/dev-issue-59/MyNightOut/nbproject/project.properties
+++ b/branches/dev-issue-59/MyNightOut/nbproject/project.properties
@@ -60,14 +60,14 @@ javac.classpath=\
     ${file.reference.hibernate-jpa-2.0-api-1.0.1.Final.jar}:\
     ${file.reference.hibernate-tools-3.6.0.CR1.jar}:\
     ${file.reference.javassist-3.12.0.GA.jar}:\
+    ${file.reference.javax.mail.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.jta-1.1.jar}:\
     ${file.reference.mockito-all-1.9.5.jar}:\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
     ${file.reference.oscache-2.1.jar}:\
     ${file.reference.slf4j-api-1.6.1.jar}:\
-    ${file.reference.slf4j-simple-1.6.1.jar}:\
-    ${file.reference.javax.mail.jar}
+    ${file.reference.slf4j-simple-1.6.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
