--- a/trunk/MyNightOut/nbproject/project.properties
+++ b/trunk/MyNightOut/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=MyNightOut
+application.vendor=Mustaine
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,6 +27,7 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/MyNightOut.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.antlr-2.7.6.jar=lib\\antlr-2.7.6.jar
 file.reference.c3p0-0.9.1.jar=lib\\c3p0-0.9.1.jar
@@ -38,6 +40,7 @@ file.reference.hibernate-entitymanager-3.6.10.Final.jar=lib\\hibernate-entityman
 file.reference.hibernate-jpa-2.0-api-1.0.1.Final.jar=lib\\hibernate-jpa-2.0-api-1.0.1.Final.jar
 file.reference.hibernate-tools-3.6.0.CR1.jar=lib\\hibernate-tools-3.6.0.CR1.jar
 file.reference.javassist-3.12.0.GA.jar=lib\\javassist-3.12.0.GA.jar
+file.reference.javax.mail.jar=lib/javax.mail.jar
 file.reference.jcalendar-1.4.jar=lib\\jcalendar-1.4.jar
 file.reference.jta-1.1.jar=lib\\jta-1.1.jar
 file.reference.mockito-all-1.9.5.jar=lib\\mockito-all-1.9.5.jar
@@ -60,6 +63,7 @@ javac.classpath=\
     ${file.reference.hibernate-tools-3.6.0.CR1.jar}:\
     ${file.reference.javassist-3.12.0.GA.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.javax.mail.jar}:\
     ${file.reference.jta-1.1.jar}:\
     ${file.reference.mockito-all-1.9.5.jar}:\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
