Ως διαχειριστής του προγράματος θα ήθελα να λαμβάνω τις αιτήσεις για δημιουργία νέων καταστημάτων μέσω e-mail.

--- a/branches/dev-issue-62/MyNightOut/nbproject/project.properties
+++ b/branches/dev-issue-62/MyNightOut/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/MyNightOut.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.AbsoluteLayout.jar=lib/AbsoluteLayout.jar
 file.reference.antlr-2.7.6.jar=lib\\antlr-2.7.6.jar
 file.reference.c3p0-0.9.1.jar=lib\\c3p0-0.9.1.jar
 file.reference.cglib-2.2.jar=lib\\cglib-2.2.jar
@@ -51,6 +52,7 @@ file.reference.slf4j-simple-1.6.1.jar=lib\\slf4j-simple-1.6.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${file.reference.AbsoluteLayout.jar}:\
     ${file.reference.antlr-2.7.6.jar}:\
     ${file.reference.c3p0-0.9.1.jar}:\
     ${file.reference.cglib-2.2.jar}:\
