--- a/branches/dev-issue-62/MyNightOut/nbproject/project.properties
+++ b/branches/dev-issue-62/MyNightOut/nbproject/project.properties
@@ -35,6 +35,7 @@ file.reference.c3p0-0.9.1.jar=lib\\c3p0-0.9.1.jar
 file.reference.cglib-2.2.jar=lib\\cglib-2.2.jar
 file.reference.commons-collections-3.1.jar=lib\\commons-collections-3.1.jar
 file.reference.dom4j-1.6.1.jar=lib\\dom4j-1.6.1.jar
+file.reference.guava-15.0.jar=C:\\Users\\Mustaine\\Downloads\\guava-15.0.jar
 file.reference.hibernate-commons-annotations-3.2.0.Final.jar=lib\\hibernate-commons-annotations-3.2.0.Final.jar
 file.reference.hibernate-core-3.6.10.Final.jar=lib\\hibernate-core-3.6.10.Final.jar
 file.reference.hibernate-entitymanager-3.6.10.Final.jar=lib\\hibernate-entitymanager-3.6.10.Final.jar
@@ -58,6 +59,7 @@ javac.classpath=\
     ${file.reference.cglib-2.2.jar}:\
     ${file.reference.commons-collections-3.1.jar}:\
     ${file.reference.dom4j-1.6.1.jar}:\
+    ${file.reference.guava-15.0.jar}:\
     ${file.reference.hibernate-commons-annotations-3.2.0.Final.jar}:\
     ${file.reference.hibernate-core-3.6.10.Final.jar}:\
     ${file.reference.hibernate-entitymanager-3.6.10.Final.jar}:\
