--- a/branches/dev-issue-29/MyNightOut/MyNightOut/MyNightOut/nbproject/project.properties
+++ b/branches/dev-issue-29/MyNightOut/MyNightOut/MyNightOut/nbproject/project.properties
@@ -33,7 +33,8 @@ file.reference.antlr-2.7.6.jar=lib\\antlr-2.7.6.jar
 file.reference.c3p0-0.9.1.jar=lib\\c3p0-0.9.1.jar
 file.reference.cglib-2.2.jar=lib\\cglib-2.2.jar
 file.reference.commons-collections-3.1.jar=lib\\commons-collections-3.1.jar
-file.reference.dbunit-2.4.9.jar=C:\\Users\\ioanna\\Desktop\\Downloads\\dbunit-2.4.9.jar
+file.reference.dbunit-2.4.9.jar=C:\\Program Files\\NetBeans 7.4\\platform\\modules\\ext\\dbunit-2.4.9.jar
+file.reference.dbunit-2.4.9.jar-1=lib\\dbunit-2.4.9.jar
 file.reference.dom4j-1.6.1.jar=lib\\dom4j-1.6.1.jar
 file.reference.hibernate-commons-annotations-3.2.0.Final.jar=lib\\hibernate-commons-annotations-3.2.0.Final.jar
 file.reference.hibernate-core-3.6.10.Final.jar=lib\\hibernate-core-3.6.10.Final.jar
@@ -106,7 +107,9 @@ javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
     ${libs.junit_4.classpath}:\
-    ${file.reference.dbunit-2.4.9.jar}
+    ${libs.DBUnit.classpath}:\
+    ${file.reference.dbunit-2.4.9.jar}:\
+    ${file.reference.dbunit-2.4.9.jar-1}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
