--- a/trunk/MyNightOut/nbproject/project.properties
+++ b/trunk/MyNightOut/nbproject/project.properties
@@ -45,6 +45,7 @@ file.reference.jcalendar-1.4.jar=lib\\jcalendar-1.4.jar
 file.reference.jta-1.1.jar=lib\\jta-1.1.jar
 file.reference.mockito-all-1.9.5.jar=lib\\mockito-all-1.9.5.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=lib\\mysql-connector-java-5.1.23-bin.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar-1=C:\\Program Files\\NetBeans 7.4\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
 file.reference.oscache-2.1.jar=lib\\oscache-2.1.jar
 file.reference.slf4j-api-1.6.1.jar=lib\\slf4j-api-1.6.1.jar
 file.reference.slf4j-simple-1.6.1.jar=lib\\slf4j-simple-1.6.1.jar
@@ -70,7 +71,9 @@ javac.classpath=\
     ${file.reference.oscache-2.1.jar}:\
     ${file.reference.slf4j-api-1.6.1.jar}:\
     ${file.reference.slf4j-simple-1.6.1.jar}:\
-    <<<<<<< .mine
+    <<<<<<< .mine:\
+    ${libs.hibernate-support.classpath}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar-1}
     ${file.reference.jcalendar-1.4.jar-1}:\
     ${file.reference.mockito-all-1.9.5.jar}:\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar-1}
