--- a/trunk/MyNightOut/nbproject/project.properties
+++ b/trunk/MyNightOut/nbproject/project.properties
@@ -49,6 +49,7 @@ file.reference.mysql-connector-java-5.1.23-bin.jar-1=C:\\Program Files\\NetBeans
 file.reference.oscache-2.1.jar=lib\\oscache-2.1.jar
 file.reference.slf4j-api-1.6.1.jar=lib\\slf4j-api-1.6.1.jar
 file.reference.slf4j-simple-1.6.1.jar=lib\\slf4j-simple-1.6.1.jar
+file.reference.uispec4j-2.4-jdk16.jar=lib/uispec4j-2.4-jdk16.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -67,13 +68,14 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.jta-1.1.jar}:\
     ${file.reference.mockito-all-1.9.5.jar}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar-1}:\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
     ${file.reference.oscache-2.1.jar}:\
     ${file.reference.slf4j-api-1.6.1.jar}:\
     ${file.reference.slf4j-simple-1.6.1.jar}:\
-    <<<<<<< .mine:\
     ${libs.hibernate-support.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar-1}
+    <<<<<<< .mine:\
+    ${file.reference.uispec4j-2.4-jdk16.jar}
     ${file.reference.jcalendar-1.4.jar-1}:\
     ${file.reference.mockito-all-1.9.5.jar}:\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar-1}
