--- a/MyNightOut/nbproject/project.properties
+++ b/MyNightOut/nbproject/project.properties
@@ -73,9 +73,9 @@ javac.classpath=\
     ${file.reference.oscache-2.1.jar}:\
     ${file.reference.slf4j-api-1.6.1.jar}:\
     ${file.reference.slf4j-simple-1.6.1.jar}:\
+    ${file.reference.uispec4j-2.4-jdk16.jar}:\
     ${libs.hibernate-support.classpath}:\
-    <<<<<<< .mine:\
-    ${file.reference.uispec4j-2.4-jdk16.jar}
+    <<<<<<< .mine
     ${file.reference.jcalendar-1.4.jar-1}:\
     ${file.reference.mockito-all-1.9.5.jar}:\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar-1}
