--- a/branches/dev-issue-62/MyNightOut/nbproject/project.properties
+++ b/branches/dev-issue-62/MyNightOut/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.jar=${dist.dir}/MyNightOut.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.AbsoluteLayout.jar=lib/AbsoluteLayout.jar
 file.reference.antlr-2.7.6.jar=lib\\antlr-2.7.6.jar
 file.reference.c3p0-0.9.1.jar=lib\\c3p0-0.9.1.jar
 file.reference.cglib-2.2.jar=lib\\cglib-2.2.jar
@@ -45,8 +46,7 @@ file.reference.javax.mail.jar=lib/javax.mail.jar
 file.reference.jcalendar-1.4.jar=lib\\jcalendar-1.4.jar
 file.reference.jta-1.1.jar=lib\\jta-1.1.jar
 file.reference.mockito-all-1.9.5.jar=lib\\mockito-all-1.9.5.jar
-file.reference.mysql-connector-java-5.1.23-bin.jar=lib\\mysql-connector-java-5.1.23-bin.jar
-file.reference.mysql-connector-java-5.1.23-bin.jar-1=C:\\Program Files\\NetBeans 7.4\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=lib/mysql-connector-java-5.1.23-bin.jar
 file.reference.oscache-2.1.jar=lib\\oscache-2.1.jar
 file.reference.slf4j-api-1.6.1.jar=lib\\slf4j-api-1.6.1.jar
 file.reference.slf4j-simple-1.6.1.jar=lib\\slf4j-simple-1.6.1.jar
@@ -71,13 +71,14 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.jta-1.1.jar}:\
     ${file.reference.mockito-all-1.9.5.jar}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar-1}:\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
     ${file.reference.oscache-2.1.jar}:\
     ${file.reference.slf4j-api-1.6.1.jar}:\
     ${file.reference.slf4j-simple-1.6.1.jar}:\
     ${file.reference.uispec4j-2.4-jdk16.jar}:\
-    ${libs.hibernate-support.classpath}
+    ${libs.hibernate-support.classpath}:\
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
     ${file.reference.jcalendar-1.4.jar-1}:\
     ${file.reference.mockito-all-1.9.5.jar}:\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar-1}
