--- a/branches/dev-issue-62/MyNightOut/nbproject/project.properties
+++ b/branches/dev-issue-62/MyNightOut/nbproject/project.properties
@@ -56,6 +56,7 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
+    ${file.reference.AbsoluteLayout.jar}:\
     ${file.reference.antlr-2.7.6.jar}:\
     ${file.reference.c3p0-0.9.1.jar}:\
     ${file.reference.cglib-2.2.jar}:\
@@ -76,9 +77,7 @@ javac.classpath=\
     ${file.reference.slf4j-api-1.6.1.jar}:\
     ${file.reference.slf4j-simple-1.6.1.jar}:\
     ${file.reference.uispec4j-2.4-jdk16.jar}:\
-    ${libs.hibernate-support.classpath}:\
-    ${file.reference.AbsoluteLayout.jar}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
+    ${libs.hibernate-support.classpath}
     ${file.reference.jcalendar-1.4.jar-1}:\
     ${file.reference.mockito-all-1.9.5.jar}:\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar-1}
