commit branch 64(έγιναν διορθώσεις σε μεταβλητές, διαγράφτηκαν κομμάτια κώδικα που δεν χρειάζονται πια, προστέθηκαν test για τη βάση)

--- a/MyNightOut/MyNightOut/nbproject/project.properties
+++ b/MyNightOut/MyNightOut/nbproject/project.properties
@@ -35,6 +35,7 @@ file.reference.antlr-2.7.6.jar=lib\\antlr-2.7.6.jar
 file.reference.c3p0-0.9.1.jar=lib\\c3p0-0.9.1.jar
 file.reference.cglib-2.2.jar=lib\\cglib-2.2.jar
 file.reference.commons-collections-3.1.jar=lib\\commons-collections-3.1.jar
+file.reference.dbunit-2.4.9.jar=lib\\dbunit-2.4.9.jar
 file.reference.dom4j-1.6.1.jar=lib\\dom4j-1.6.1.jar
 file.reference.hibernate-commons-annotations-3.2.0.Final.jar=lib\\hibernate-commons-annotations-3.2.0.Final.jar
 file.reference.hibernate-core-3.6.10.Final.jar=lib\\hibernate-core-3.6.10.Final.jar
@@ -74,8 +75,6 @@ javac.classpath=\
     ${file.reference.mockito-all-1.9.5.jar}:\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
     ${file.reference.oscache-2.1.jar}:\
-    ${file.reference.slf4j-api-1.6.1.jar}:\
-    ${file.reference.slf4j-simple-1.6.1.jar}:\
     ${file.reference.uispec4j-2.4-jdk16.jar}:\
     ${libs.hibernate-support.classpath}
     ${file.reference.jcalendar-1.4.jar-1}:\
@@ -111,7 +110,8 @@ javac.target=1.6
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit_4.classpath}
+    ${libs.junit_4.classpath}:\
+    ${file.reference.dbunit-2.4.9.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -121,6 +121,7 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.dbunit-2.4.9.jar=C:\\Users\\ioanna\\Desktop\\dbunit-2.4.8-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
