--- a/MyNightOut/nbproject/project.properties
+++ b/MyNightOut/nbproject/project.properties
@@ -3,6 +3,8 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.desc=The Night Belongs To You
+application.homepage=http://83.212.111.224/mynightout/
 application.title=MyNightOut
 application.vendor=MyNightOut
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
